un segundo commit

--- a/indes.html
+++ b/indes.html
@@ -11,6 +11,7 @@
 <body>
     <div class="contendor">
         <h1>hola soy el frontend</h1>
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nisi autem ad facere officia voluptatibus quam, voluptas sapiente, consequatur, et aut iure quas omnis neque eius! Aperiam dicta recusandae minima!</h1>
     </div>
 
 </body>
